# ucm-tfm-grupo-4

./: .dockerignore  .env.docker.gradio.example  .env.example  .gitattributes  .gitignore  Dockerfile.gradio  LICENSE  README.md  docker-compose.yml  gradio_interface.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  config.py  settings.py
data/database/postgres/: DatabaseLog.csv  DimProductSubcategory.csv  DimReseller.csv  FactAdditionalInternationalProductDescription.csv  FactCurrencyRate.csv  FactFinance.csv  FactSalesQuota.csv  NewFactCurrencyRate.csv  create_adventure_works_postgres.sql
data/database/tsql/: DimCurrency.csv  DimGeography.csv  DimProductSubcategory.csv  FactAdditionalInternationalProductDescription.csv  instawdbdw.sql
data/embeddings/auxs/: MDL_adventure_works_dw.yaml  get_information_schema.sql
data/embeddings/chroma/: .env.example  chroma.sqlite3
data/embeddings/chromadb/: .env.example
data/embeddings/documents/: MDL_adventure_works_dw.yaml  business_rules.md  query_examples.json
notebooks/: conclusion_from_response.ipynb  conclusions_generator.ipynb  context_generator.ipynb  create_embeddings_in_chorma_db.ipynb  create_embeddings_in_chroma_db.ipynb  create_reduced_db_schemas.ipynb  query_generator.ipynb  query_generator_node.ipynb  query_validator.ipynb  test_implemented_graphs copy.ipynb  test_implemented_graphs.ipynb  translate_tsql_to_postgres.ipynb  validation_and_correction.ipynb
src/: __init__.py  query_generator_node.py
src/back/: __init__.py
src/back/chroma_collections/: __init__.py  base.py  context_enricher.py  examples.py  hierarchical.py
src/back/embeddings/: __init__.py  (+1 more)
src/pg_sql/: __init__.py  execute.py  utils.py
src/utils/: __init__.py
(+132 files in other folders)
