[project]
name = "ucm-tfm-grupo-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "notebook>=7.4.4",
    "openai==1.93.2",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
]
