[project]
name = "ucm-tfm-grupo-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.0.15",
    "chromadb-ops>=0.1.5",
    "google-genai>=1.30.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "notebook>=7.4.4",
    "openai==1.93.2",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "regex>=2025.7.34",
    "sqlglot>=27.11.0",
]
